# aa-ma-forge

./: .gitignore  .importlinter  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  snapshot_report.html
.github/workflows/: security.yml
claude-code/agents/: aa-ma-scribe.md  aa-ma-validator.md  code-reviewer.md  codebase-onboarding-conventions.md  codebase-onboarding-health.md  codebase-onboarding-runbook.md  codebase-onboarding-synthesizer.md  context7-evidence-auditor.md  future-proofing-auditor.md  security-auditor.md  tdd-sequence-auditor.md
claude-code/codemem/: README.md
claude-code/codemem/commands/: .gitkeep  codemem.md
claude-code/codemem/hooks/: post-commit.sh
claude-code/codemem/mcp/: server.py
claude-code/commands/: aa-ma-plan.md  aa-ma-search.md  archive-aa-ma.md  execute-aa-ma-full.md  execute-aa-ma-milestone.md  execute-aa-ma-step.md  grill-me.md  ops-mode.md  sole-dev-merge.md  ultraplan.md  understand-codebase.md  verify-plan.md
claude-code/hooks/: aa-ma-commit-drift.sh  aa-ma-commit-signature.sh  aa-ma-plan-marker.sh  aa-ma-plan-skip-warn.sh  aa-ma-session-end-dirty.sh  aa-ma-session-start.sh  pre-compact-aa-ma.sh  security-static-check.sh
claude-code/hooks/lib/: aa-ma-parse.sh
claude-code/rules/: aa-ma.md  engineering-standards.md
claude-code/skills/aa-ma-execution/: SKILL.md
claude-code/skills/aa-ma-plan-workflow/: SKILL.md
claude-code/skills/agent-teams/: SKILL.md
claude-code/skills/complexity-router/: SKILL.md
claude-code/skills/debugging-strategies/: SKILL.md
claude-code/skills/defense-in-depth/: SKILL.md
claude-code/skills/dispatching-parallel-agents/: SKILL.md
claude-code/skills/goal-condition-synthesis/: SKILL.md
claude-code/skills/grill-with-docs/: ADR-FORMAT.md  CONTEXT-FORMAT.md  SKILL.md
claude-code/skills/impact-analysis/: SKILL.md
claude-code/skills/llm-evaluation/: SKILL.md
claude-code/skills/operational-constraints/: SKILL.md
claude-code/skills/plan-verification/: SKILL.md
claude-code/skills/prototype/: LOGIC.md  SKILL.md  UI.md
docs/: ATTRIBUTION.md  lessons.md  ultraplan-rename-rationale.md
docs/adr/: 0001-engineering-standards-architecture.md  0002-grill-with-docs-adoption.md  0003-prototype-adoption.md  0004-write-a-skill-adoption.md  0005-post-impl-adversarial-review.md  0006-understand-codebase-adoption.md  0007-aa-ma-tui-tracker.md  INDEX.md  TEMPLATE.md
docs/benchmarks/: codemem-vs-aider-v2.md  codemem-vs-aider.md  codemem-vs-index.md  results-codemem-vs-aider-2026-04-18.json  results-codemem-vs-aider-v2-2026-05-08.json
docs/codemem/: ARCHITECTURE.md  design-scratchpad.md  install-zero-config.md  kill-criteria.md  migration-from-index.md  performance-slo.md  positioning.md  symbol-id-grammar.md
docs/demo/: codemem-co-changes-transcript.md
docs/narrative/: how-we-got-here.md
docs/plans/: 2026-04-05-aa-ma-forge-design.md  2026-04-05-aa-ma-forge-implementation.md  2026-04-05-versioning-design.md  2026-04-05-versioning-implementation.md
docs/research/: skill-ecosystem-audit.md
docs/runbooks/: rollback-v0.5.0.md
docs/spec/: aa-ma-quick-reference.md  aa-ma-specification.md  aa-ma-team-guide.md  claude-code-foundations.md  plan-marker-grammar.md
docs/templates/: README.md  context-log-template.md  engineering-standards-template.md  impl-review-template.md  plan-template.md  provenance-template.md  reference-template.md  tasks-template.md  tests-template.yaml  verification-template.md
examples/aa-ma-team-guide/: aa-ma-team-guide-context-log.md  aa-ma-team-guide-plan.md  aa-ma-team-guide-reference.md  aa-ma-team-guide-tasks.md  aa-ma-team-guide-tests.yaml
examples/verification-example/: verification.md
prototypes/: m3_textual_watchfiles_spike.py
scripts/: bench_codemem.py  bench_codemem_vs_aider.py  bench_sweep.py  check_adr_index.sh  check_codemem_doc_drift.py  grill-mode-resolver.sh  install.sh  uninstall.sh
src/aa_ma/: __init__.py  goal_synthesis.py  plan_parsers.py
src/aa_ma/tui/: __init__.py  (+7 more)
tests/: test_goal_synthesis.py
tests/agents/: test_codebase_onboarding_agents.py
tests/assets/: test_understand_codebase_xrefs.py
tests/codemem/: conftest.py  test_aa_ma_context.py  test_ast_grep_parser.py  test_audit_profile_parser.py  test_bench_harness.py  test_co_changes.py  test_corpus_grandfathering.py  test_doc_drift.py  test_git_mining.py  test_hot_spots.py  test_incremental.py  test_indexer.py  test_install_and_cli.py  test_layers.py  test_mcp_server.py  test_mcp_server_integration.py  test_mcp_tools.py  test_owners.py  test_pagerank.py  test_post_commit_storm.py  test_python_parser.py  test_resolver.py  test_schema.py  test_schema_v2.py  test_symbol_diff.py  test_symbol_history.py  test_tdd_waiver_parser.py  test_wal.py  test_wal_hygiene.py  test_wal_replay_roundtrip.py  test_wal_rotation.py  test_writer_lock.py
tests/commands/: test_grill_mode_resolver.py  test_understand_codebase_command.py
tests/golden/: layers_aa_ma_forge.txt
tests/hooks/: aa-ma-parse.bats  aa-ma-plan-marker.bats  aa-ma-plan-skip-warn.bats  commit-drift.bats  commit-signature.bats  execute_aa_ma_milestone_phase_6_8.bats  install_dry_run.bats  pre-compact.bats  security-static-check.bats  session-end-dirty.bats  session-start.bats
tests/integration/: test_marker_lifecycle.bats
tests/perf/: test_budgets.py
tests/plan_markers/: test_fingerprint.py  test_parser.py
tests/skills/: _helpers.py  test_grill_with_docs_frontmatter.py  test_prototype_frontmatter.py  test_understand_codebase_frontmatter.py  test_verify_impl_agents.py  test_write_a_skill_frontmatter.py
tests/smoke/: aa-ma-engineering-standards-smoke.md  aa-ma-plan-skip-detection-findings.md  aa-ma-plan-skip-detection.md
tests/tui/: _static_tasks.py  conftest.py  test_app_smoke.py  test_integration.py  test_json_output.py  test_main_dispatch.py  test_model.py  test_parser.py  test_parser_properties.py  test_screens_dashboard.py  test_screens_task_detail.py  test_snapshot.py  test_watcher.py  test_widgets_kanban_column.py  test_widgets_task_card.py
(+200 files in other folders)
