[project]
name = "aa-ma"
version = "0.3.0"
description = "Advanced Agentic Memory Architecture - structured external memory for AI coding agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Stephen J Newhouse", email = "stephen.j.newhouse@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",   # M1 perf budget enforcement (Step 1.13)
    "hypothesis>=6.0",         # M2 property-based round-trip tests (Step 2.4)
    "import-linter>=2.0",      # M1 layer-boundary enforcement (Step 1.11)
    "python-semantic-release>=9.0",
    "ruff>=0.4",
]

[tool.uv.workspace]
# codemem-mcp is a sibling standalone package; see packages/codemem-mcp/pyproject.toml.
# Rationale documented in .claude/dev/active/codemem/codemem-plan.md §3 #1 (Q1 + Q13).
members = ["packages/codemem-mcp"]

[tool.uv.sources]
codemem-mcp = { workspace = true }

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
    "VERSION:__version__",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["VERSION:__version__"]
major_on_zero = false
tag_format = "v{version}"
commit_message = "chore(release): v{version}"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"

# --------------------------------------------------------------------
# pytest (M1 Task 1.13)
# --------------------------------------------------------------------
# The `perf` marker gates the performance-budget suite at
# `tests/perf/test_budgets.py`. Default test runs skip it (via the
# `addopts` filter below); CI's perf job opts in with `-m perf`.
[tool.pytest.ini_options]
markers = [
    "perf: performance-budget gates (codemem M1 Task 1.13). Skipped by default; run with `-m perf`.",
    "slow: long-running property tests (codemem M2 Task 2.4 roundtrip — 100 examples). Skipped by default; run with `-m slow`.",
]
addopts = "-m 'not perf and not slow'"
