[project]
name = "aa-ma"
# NOTE: version is owned by `uv run cz bump` (commitizen) per [tool.commitizen]
# below. Do NOT hand-edit. aa-ma-tui-tracker M4 ships v0.10.0 via `cz bump
# --increment MINOR`; M0 deliberately defers the bump to avoid commitizen vs.
# semantic_release conflict. See aa-ma-tui-tracker-context-log.md (Decision 6).
version = "0.10.0"
description = "Advanced Agentic Memory Architecture - structured external memory for AI coding agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Stephen J Newhouse", email = "stephen.j.newhouse@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# Runtime dependencies — created in aa-ma-tui-tracker M0 T0.1 (2026-05-17).
# Declared explicitly per L-055 (no implicit transitives for direct imports).
dependencies = [
    "pydantic>=2,<3",         # Typed model (Task/Milestone/Step). Promoted from transitive.
    "textual>=0.80,<1.0",     # Interactive TUI framework (M3).
    "rich>=13,<14",           # Snapshot mode + Textual renderer (M2). Declared explicitly per L-055.
    "watchfiles>=0.21,<1.0",  # Async file-watch for live refresh (M3). Already transitive via fastmcp.
]

[project.scripts]
# CLI entry point — created in aa-ma-tui-tracker M0 T0.2 (2026-05-17).
aa-ma-tui = "aa_ma.tui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",   # M1 perf budget enforcement (Step 1.13)
    "pytest-cov>=5.0",         # aa-ma-tui-tracker M1 T1.10: coverage gate ≥90% on parser.py + model.py
    "hypothesis>=6.0",         # M2 property-based round-trip tests (Step 2.4)
    "import-linter>=2.0",      # M1 layer-boundary enforcement (Step 1.11)
    "python-semantic-release>=9.0",
    "ruff>=0.4",
    "tiktoken>=0.7",           # codemem-token-benchmarks M2: external tokenizer for cross-tool normalization
    "mcp>=1.27",               # codemem-benchmark-fairness-v2 M2a.1: explicit dev dep for jCodeMunch stdio MCP round-trip in scripts/bench_codemem_vs_aider.py (already transitive via fastmcp; declared explicitly per L-055).
    "codemem-mcp",             # OBS-001 fix (2026-04-20): workspace member must be an explicit dep for `uv sync` to install it into .venv. Resolved via [tool.uv.sources] codemem-mcp = { workspace = true }. Required so `uv run codemem intel ...` resolves (M3 prerequisite).
]

[tool.uv.workspace]
# codemem-mcp is a sibling standalone package; see packages/codemem-mcp/pyproject.toml.
# Rationale documented in .claude/dev/active/codemem/codemem-plan.md §3 #1 (Q1 + Q13).
members = ["packages/codemem-mcp"]

[tool.uv.sources]
codemem-mcp = { workspace = true }

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
    "VERSION:__version__",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["VERSION:__version__"]
major_on_zero = false
tag_format = "v{version}"
commit_message = "chore(release): v{version}"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"

# --------------------------------------------------------------------
# pytest (M1 Task 1.13)
# --------------------------------------------------------------------
# The `perf` marker gates the performance-budget suite at
# `tests/perf/test_budgets.py`. Default test runs skip it (via the
# `addopts` filter below); CI's perf job opts in with `-m perf`.
[tool.pytest.ini_options]
markers = [
    "perf: performance-budget gates (codemem M1 Task 1.13). Skipped by default; run with `-m perf`.",
    "slow: long-running property tests (codemem M2 Task 2.4 roundtrip — 100 examples). Skipped by default; run with `-m slow`.",
]
addopts = "-m 'not perf and not slow'"

[dependency-groups]
dev = [
    "pytest-textual-snapshot>=1.0",
]
